# seekerclaw-x-shard-lock

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  SKILL-FORMAT.md  generate_proofs_demo.js  view_seeker.xml  view_seeker_2.xml  view_seeker_branded.xml  view_seeker_logs.xml
.github/ISSUE_TEMPLATE/: bug_report.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
docs/internal/: AGENT-IDENTITY-FLOW.md  DEERFLOW_AUDIT.md  DEERFLOW_FEATURES_PLAN.md  DISCORD_CHANNEL_PLAN.md  GITHUB_SECRETS.md  IDEAS-VAULT.md  MEMORY-SYSTEM-AUDIT.md  METAPLEX-AGENTS.md  METAPLEX-PARTNERSHIP.md  MISSED_TASK_NOTIFICATION_PLAN.md  MULTILANGUAGE_PLAN.md  NETWORK_RESILIENCE_PLAN.md  OPEN-SOURCE-PLAN.md  OPENCLAW_TRACKING.md  OPENROUTER-PLAN.md  OPEN_WALLET_STANDARD_AUDIT.md  PINCHTAB_AUDIT.md  QCLAW_AUDIT.md  QUICK_ACTIONS_PLAN.md  REFACTOR-REPORT.md  RESEARCH.md  SETTINGS_INFO.md  SKILL-CREATOR.md  TEMPLATES.md  TODO_PERSISTENCE_PLAN.md  TOOL_GUARD_SETTINGS_PLAN.md  WEBSITE.md
docs/internal/audits/: HEARTBEAT-AUDIT.md  JUPITER-AUDIT.md  JUPITER-TEST-CHECKLIST.md  LOG-AUDIT.md  OWNER-GATE-AUDIT.md  PARITY-AUDIT.md  SAB-AUDIT-v10.md  SAB-AUDIT-v11.md  SAB-AUDIT-v12.md  SAB-AUDIT-v13.md  SAB-AUDIT-v14.md  SAB-AUDIT-v15.md  SAB-AUDIT-v5.md  SAB-AUDIT-v6.md  SAB-AUDIT-v7.md  SAB-AUDIT-v8.md  SAB-AUDIT-v9.md  TIMEOUT-AUDIT.md
rust-core/: Cargo.toml
rust-core/src/: lib.rs
scripts/: build-rust-core.sh  fix-ndk-links.sh
testing/: README.md  test-auth.js  test-headers.js  test-messages.js
(+80 files in other folders)
