[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
reed-solomon-erasure = "6.0"
rs_merkle = "1.4"
bytemuck = "1.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.1"
